<resources>
    <string name="app_name">NYTimesSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_adapters">Adapters</string>
    <string name="action_search">Search</string>
    <string name="hint">Enter search query</string>
    <string name="button_search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting_text_begin_date">Begin Date</string>
    <string name="setting_text_sort">Sort Order</string>
    <string name="setting_text_news_dest">News Desk Values</string>
    <string name="setting_spn_art">Art</string>
    <string name="setting_spn_Fashion"><![CDATA[Fashion & Style]]></string>
    <string name="setting_spn_Sports">Sports</string>
    <string name="setting_btn_save">Save</string>
</resources>
